[gd_scene load_steps=9 format=3 uid="uid://dda7iu4sk2hnf"]

[ext_resource type="PackedScene" uid="uid://lqipji8qy3t8" path="res://ui/MainMenu/main_menu_buttons.tscn" id="1_0dkrt"]
[ext_resource type="Script" uid="uid://d3813jurg0m13" path="res://code/ui/main_menu.gd" id="1_wk0pr"]
[ext_resource type="Texture2D" uid="uid://bikgdo5h1nljk" path="res://ui/logo_large_monochrome_dark.png" id="2_0dkrt"]
[ext_resource type="PackedScene" uid="uid://v3o67ynj7g3j" path="res://ui/fade.tscn" id="4_rmr83"]

[sub_resource type="Gradient" id="Gradient_rmr83"]
colors = PackedColorArray(0.114897, 0.114897, 0.114897, 1, 0.230315, 0.230315, 0.230315, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t7e0r"]
gradient = SubResource("Gradient_rmr83")
fill_from = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl0q7"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7e0r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk0pr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_t7e0r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(900, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -55.0
offset_right = 0.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 80
bbcode_enabled = true
text = "[b]AI TrAIning"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxFlat_gl0q7")

[node name="MainMenuButtons" parent="VBoxContainer" instance=ExtResource("1_0dkrt")]
layout_mode = 2

[node name="Copyright" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_t7e0r")
text = "Â© 2025, Filippo Sabbadin"
fit_content = true

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -99.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(10, 10)
texture = ExtResource("2_0dkrt")
expand_mode = 1

[node name="Fade" parent="." instance=ExtResource("4_rmr83")]
layout_mode = 1

[connection signal="load_game" from="VBoxContainer/MainMenuButtons" to="." method="_on_main_menu_buttons_load_game"]
[connection signal="new_game" from="VBoxContainer/MainMenuButtons" to="." method="_on_main_menu_buttons_new_game"]
